--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mariadb": "^3.0.1",
     "mongodb": "^4.10.0",
     "mysql": "^2.18.1",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "request-ip": "^3.3.0"
   }
 }
